Update contact details on summary doc

--- a/publication/markdown/summary.Rmd
+++ b/publication/markdown/summary.Rmd
@@ -120,7 +120,9 @@ Part of the LDP standard calculation requires the number of referrals for PDS to
 
 # Contact
 
-Zeg Ashraf | Principal Information Analyst |  [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+Zeg Ashraf | Principal Information Analyst | 0131 314 1737 [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
+
+Jennifer Noall | Senior Information Analyst | 0131 275 7220 | [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
 Jennifer Thom | Information Analyst | 0131 314 1754 | [phs.dementiapds@phs.scot](mailto:phs.dementiapds@phs.scot)
 
