update alignment/header name

--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -266,7 +266,7 @@ headers <-
     "Percentage of LDP Standard Achieved")
 
 hb_headers <- c("NHS Board", headers)
-ijb_headers <- c("Integration Joint Board", headers)
+ijb_headers <- c("Integration Authority area", headers)
 
 # Trend for 12m PDS by HB
 hb_trend <-
@@ -750,13 +750,13 @@ hb %>%
   ft_dementia_style() %>%
   set_header_labels(values = hb_headers) %>% 
   padding(j = 2:6, part = "body", padding.right = 15) %>%
-  align(j = ncol(ijb), part = "body", align = "center") %>%
-  width(j = 1, width = 2.2) %>%
-  width(j = 2:(ncol(ijb) - 1), width = 0.8) %>%
-  width(j = ncol(ijb), width = 1) %>%
+  align(j = ncol(hb), part = "body", align = "right") %>%
+  width(j = 1, width = 2.5) %>%
+  width(j = 2:(ncol(hb) - 1), width = 0.8) %>%
+  #width(j = ncol(hb), width = 1) %>%
   fontsize(size = 10.5, part = "header") %>% 
-  fontsize(size = 11, part = "body") %>% 
-  set_table_properties(layout = "autofit")
+  fontsize(size = 11, part = "body") #%>% 
+  #set_table_properties(layout = "autofit")
 
 ```
 
