--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -111,7 +111,7 @@ Row
 
 **NHS Orkney** – Due to IT staff issues and lack of access to a Consultant Psychiatrist in *2022/23* and *2023/24*, NHS Orkney were unable to provide data for 2022/23 (*Q3*, *Q4*) and 2023/24 (*Q1* and *Q2*).
 
-**NHS Shetland** - NHS Shetland do not have a PDS worker in post for *2022/23* *Q2, Q3* and *Q4*, and *2023/24 Q1 and Q2*. Therefore, NHS Shetland are unable to provide PDS allocation and contact dates for referrals in these quarters.  This explains the large increase seen in their query rate in *2022/23* as the waiting list will exceed 6 months for many. Once a PDS worker has been assigned these dates will be completed.
+**NHS Shetland** - NHS Shetland have not had a PDS worker in post since *2022/23 Q1*.  As a result 38 people referred to PDS could not be allocated or contacted by a PDS worker within 12 months of diagnosis hence they have been recorded as not having met the standard. A PDS worker has recently been assigned to post and the PDS service in Shetland will resume. Currently due to the lack of the required information to calculate the standard it is not possible to calculate the standard for *2023/24* year.  It is anticipated that the necessary information will be available in future submissions and figures for *2023/24* will then be revised. 
 
 **NHS Grampian** - Due to staffing issues and system changes, Aberdeen City have reported that they are finding it difficult to collate and report their data timeously and that there will be a lag in the numbers reported. Therefore the numbers presented for recent quarters will be an underestimate of the true number of referrals and likely to be revised in subsequent quarters. Due to changes in service provider the figures for Aberdeen City in 2019/20 and 2020/21 have been affected.
 
