--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -159,11 +159,13 @@ est_date3 <- dmy(01042023)
              hb == "NHS Shetland" & sel_fy == extract_fin_year(date22_23) | hb == "NHS Shetland" & sel_fy == extract_fin_year(date23_24) ~
                paste0("",
              "**Please note:** ",
-             "*NHS Shetland do not have a PDS worker in post for 2022/23 Q2 and Q3",
-             "and 2023/24 Q1 and Q2, therefore are unable to provide PDS allocation and contact dates for referrals ",
-             "in these quarters. This explains the large increase seen in their query rate in 2022/23 ",
-             "as the waiting list will exceed 6 months for many. Once a PDS worker has been assigned ",
-             "these dates will be completed.*"),
+             "NHS Shetland have not had a PDS worker in post since 2022/23 Q1. As a result 38 people ",
+             "referred to PDS could not be allocated or contacted by a PDS worker within 12 months of diagnosis ", 
+             "hence they have been recorded as not having met the standard. A PDS worker has recently been ",
+             "assigned to post and the PDS service in Shetland will resume. Currently due to the lack of the ",
+             "required information to calculate the standard it is not possible to calculate the standard for ",
+             "2023/24 year. It is anticipated that the necessary information will be available in future submissions "
+             "and figures for 2023/24 will then be revised."),
       TRUE ~ paste0(""))
   
 
