--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -68,10 +68,10 @@ est_date3 <- dmy(01042023)
     case_when(sel_fy == extract_fin_year(est_date1) | sel_fy == extract_fin_year(est_date2) | sel_fy == extract_fin_year(est_date3) ~
       paste0("",
              "**Please note:** ",
-             "For financial years *2021/22, 2022/23 and 2023/24,* the estimated and projected diagnosis rates ",
-             "referenced in the report published by the Scottish Government ",
-             "[Estimated and Projected Diagnosis Rates for Dementia in Scotland:2014-2020] ",
-             "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/) ",
+             "In December 2016, the Scottish Government published a report: 2014-2020 ",
+             "Estimated and Projected Diagnosis Rates for Dementia in Scotland:",
+             "(https://www.gov.scot/publications/estimated-projected-diagnosis-rates-dementia-scotland-2014-2020/). ", 
+             "For financial years *2021/22, 2022/23 and 2023/24,* the rates referenced in the report ",
              "were used to create national, age specific rates of dementia incidence ",
              "per 1,000 population which were then applied to the National Records of Scotland (NRS) ",
              "Mid-2021 Population Estimates to obtain the incidence estimates."),
@@ -222,7 +222,7 @@ Row
 
 `r scot_text2`
 
-` r scot_text3`
+`r scot_text3`
 
 
 Row `r if(complete_year == FALSE)"{.hidden}"` 
