--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -111,31 +111,34 @@ est_date3 <- dmy(01042023)
 
   
   # Data quality notes - Scotland Q1 2022/23
-  
-  scot_date1 <- dmy(01042022)
-  scot_date2 <- dmy(01042023)
+  scot_date1 <- dmy(01042020)
+  scot_date2 <- dmy(01042021)
+  scot_date3 <- dmy(01042022)
+  scot_date4 <- dmy(01042023)
   
   scot_text <-  
-    case_when(sel_fy == extract_fin_year(scot_date1) | sel_fy == extract_fin_year(scot_date2) ~
+    case_when(sel_fy == extract_fin_year(scot_date1) | 
+              sel_fy == extract_fin_year(scot_date2) | 
+              sel_fy == extract_fin_year(scot_date3) | 
+              sel_fy == extract_fin_year(scot_date4) ~
     paste0(" ", 
-           "**Please note:** ",
-           "*Due to staffing issues the 2022/23 and 2023/24 Scotland figure does not include ",
-           "data from the following areas for the stated quarters : NHS Orkney 2022/23 ",
-           "(Q3 and Q4) and 2023/24 (Q1 and Q2)*"), 
+             "**Please note:** ",
+             "*PHS PDS Data Management Team are working with NHS Orkney to identify and fix issues ",
+             "with their data submissions. Currently these issues affect data for years 2020/21 to 2023/24.*"),
             TRUE ~ paste0(""))
   
   scot_text2 <- 
-    case_when(sel_fy == extract_fin_year(scot_date2) ~
+    case_when(sel_fy == extract_fin_year(scot_date4) ~
               paste0(" ", 
               "**Please note:** ",
               "*PHS have identified issues with the data submitted by NHS Tayside for 2023/24, ",
-              "which has resulted in some records showing as having met the standard at the end ",
-              "of Q3. PHS will work with the Health Board to try and rectify this data issue ",
+              "which has resulted in some records showing as incorrectly having met the standard. ",
+              "PHS are working with the Health Board to try and rectify this data issue ",
               "in future submissions.*"), 
             TRUE ~ paste0(""))
   
     scot_text3 <- 
-    case_when(sel_fy == extract_fin_year(scot_date2) ~
+    case_when(sel_fy == extract_fin_year(scot_date4) ~
               paste0(" ", 
               "**Please note:** ",
              "*NHS Shetland have not had a PDS worker in post since 2022/23 Q1. As a result 38 people ",
