suggested code to automate update of text when data becomes finalised.

--- a/management-report/markdown/subpage-scotland.Rmd
+++ b/management-report/markdown/subpage-scotland.Rmd
@@ -30,7 +30,7 @@ qt_text <-
   }
 
 # Text to explain incomplete years / referrals still ongoing
-latest_final_year <- dmy(01042020)
+latest_final_year <- dmy(paste0("0104",substr(finalised_years[length(finalised_years)],1,4)))
 
 completeness_text <-
   case_when(
