--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -29,7 +29,7 @@ detach("package:tidylog", unload = TRUE)
 walk(dir(here::here("functions"), full.names = TRUE), source)
 
 # Load PDS data
-pds <- read_rds(get_mi_data_path("final_data", ext = "rds")) %>% 
+pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
@@ -42,7 +42,7 @@ exp <- read_csv(get_exp_diagnoses_path())
 
 
 # Load error summary
-err <- read_rds(get_mi_data_path("error_data", ext = "rds")) %>% 
+err <- read_rds(get_mi_data_path("error_data", ext = "rds", test_output = test_output)) %>% 
 
   mutate(ijb = if_else(is.na(ijb),
                                 "Unknown",
