--- a/publication/markdown/report.Rmd
+++ b/publication/markdown/report.Rmd
@@ -32,7 +32,7 @@ format_perc <- function(x, dp = 1){
 
 # LDP Dataset
 pds <- 
-  read_rds(get_pub_data_path()) %>% 
+  read_rds(get_pub_data_path(test_output = test_output)) %>% 
   filter(ijb != "Unknown" & referrals > 0)
 
 # Expected Diagnoses (Incidence)
@@ -41,7 +41,7 @@ exp <- read_csv(get_exp_diagnoses_path()) %>%
 
 # Error rates 
 err <- 
-  read_rds(get_mi_data_path(type = "error_data", ext = "rds")) %>% 
+  read_rds(get_mi_data_path(type = "error_data", ext = "rds", test_output = test_output)) %>% 
   filter(health_board == "Scotland" & fy %in% fy_in_pub) %>%
   mutate(perc = format_perc(total_errors / records * 100)
   ) %>%
